Se realizan cambios previos al despliegue

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "tateti-random",
+  "name": "conversor-romanos",
   "version": "1.0.0",
-  "main": "tateti-random.js",
+  "main": "romanos.js",
   "scripts": {
-    "start": "node tateti-random.js",
+    "start": "node romanos.js",
     "test": "jest"
   },
   "dependencies": {
