--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,16 @@
     { "src": "api/romanos.js", "use": "@vercel/node" }
   ],
   "routes": [
-    { "src": "/(.*)", "dest": "api/romanos.js" }
+    {
+      "src": "/(.*)", 
+      "dest": "api/romanos.js",
+      "headers": {
+        "Access-Control-Allow-Origin": "*",
+        "Access-Control-Allow-Methods": "GET,POST,OPTIONS",
+        "Access-Control-Allow-Headers": "Content-Type",
+        "X-Content-Type-Options": "nosniff",
+        "X-Frame-Options": "DENY"
+      }
+    }
   ]
 }
