-Se agregan excepciones y try catchs -Se cambiaron algunos mensajes -Se han agregado algunos nuevos tests -Se han cambiado ciertos codigos de error de retorno (400 - bad request) -Se agrega mas control a los parametros que reciben las funciones

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "romanos.js",
   "scripts": {
-    "start": "node romanos.js",
+    "start": "node api/romanos.js",
     "test": "jest"
   },
   "dependencies": {
